2023-08-27T16:08:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5991939296 # 1138
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
* notice: last 14d: unq all: 5 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1639 152413 / 1669 156720
* notice: next accum: outdated-unq outdated-all / unq all: 1639 152413 / 1669 156815
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -94 / +2 +207 -0 -0 / 2 207
* notice: removed / changed dates: [] / [2023-08-13 2023-08-27]

2023-08-27T08:09:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5989760509 # 1137
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
* notice: last 14d: unq all: 5 4140
* notice: prev accum: outdated-unq outdated-all / unq all: 1639 152413 / 1667 156608
* notice: next accum: outdated-unq outdated-all / unq all: 1639 152413 / 1669 156720
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -117 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-08-13 2023-08-27]

2023-08-27T00:37:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5987846502 # 1136
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
* notice: last 14d: unq all: 5 4145
* notice: prev accum: outdated-unq outdated-all / unq all: 1637 152111 / 1667 156513
* notice: next accum: outdated-unq outdated-all / unq all: 1639 152413 / 1667 156608
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -50 / +1 +299 -0 -0 / 1 299
* notice: removed / changed dates: [2023-08-12] / [2023-08-13 2023-08-26]

2023-08-26T16:08:26Z: