@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-15T00:35:02Z",
-  "count" : 301,
+  "timestamp" : "2023-08-28T00:36:22Z",
+  "count" : 247,
   "count_minmax" : [ 112, 301 ],
-  "count_decinc" : [ -0, +301 ],
+  "count_decinc" : [ -54, +301 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
