@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-27T16:08:34Z",
-  "count" : 207,
-  "count_minmax" : [ 112, 207 ],
-  "count_decinc" : [ -0, +207 ],
+  "timestamp" : "2023-08-28T00:36:22Z",
+  "count" : 300,
+  "count_minmax" : [ 112, 300 ],
+  "count_decinc" : [ -0, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
