@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-08-27T16:08:34Z",
-  "count_outdated" : 152413,
-  "uniques_outdated" : 1639,
-  "count" : 156815,
+  "timestamp" : "2023-08-28T00:36:22Z",
+  "count_outdated" : 152714,
+  "uniques_outdated" : 1641,
+  "count" : 156908,
   "uniques" : 1669,
   "clones" : [
     {
-      "timestamp": "2023-08-13T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 301 ],
-      "count_decinc": [ 261, 301 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2023-08-14T00:00:00Z",
-      "count": 301,
+      "count": 247,
       "count_minmax": [ 112, 301 ],
-      "count_decinc": [ 0, 301 ],
+      "count_decinc": [ 54, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-08-27T00:00:00Z",
-      "count": 207,
-      "count_minmax": [ 112, 207 ],
-      "count_decinc": [ 0, 207 ],
+      "count": 300,
+      "count_minmax": [ 112, 300 ],
+      "count_decinc": [ 0, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
