@@ -1,15 +1,10 @@
 {
-  "count": 4141,
+  "count": 4140,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-08-13T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-08-14T00:00:00Z",
-      "count": 301,
+      "count": 247,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-08-27T00:00:00Z",
-      "count": 207,
+      "count": 300,
       "uniques": 2
     }
   ]
