@@ -1,3 +1,12 @@
+2023-08-28T00:36:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5994150244 # 1139
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-28
+* notice: last 14d: unq all: 5 4140
+* notice: prev accum: outdated-unq outdated-all / unq all: 1639 152413 / 1669 156815
+* notice: next accum: outdated-unq outdated-all / unq all: 1641 152714 / 1669 156908
+* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -54 / +2 +300 -0 -0 / 2 300
+* notice: removed / changed dates: [2023-08-13] / [2023-08-14 2023-08-27]
+
 2023-08-27T16:08:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5991939296 # 1138
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
